fix: remove scrollbar in mozila

--- a/src/widget/Tabs/ui/TabList/TabList.module.css
+++ b/src/widget/Tabs/ui/TabList/TabList.module.css
@@ -21,6 +21,8 @@
 
   display: flex;
   gap: 20px;
+
+  scrollbar-width: none;
 }
 
 .tabs::-webkit-scrollbar {
